--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             var date = new Date();
             var hours = date.getHours();
             var minutes = date.getMinutes();
+            if (minutes < 10) {
+                minutes = "0" + minutes;
+            }
+
             var seconds = date.getSeconds();
             if (seconds < 10) {
                 seconds = "0" + seconds;
@@ -27,6 +31,7 @@
             else if (milliseconds < 10) {
                 milliseconds = "00" + milliseconds;
             }
+
             document.getElementById("timer").innerHTML = hours + ":" + minutes + ":" + seconds + ":" + milliseconds;
         }, 10);
     </script>
