--- a/index.html
+++ b/index.html
@@ -37,13 +37,18 @@
             }
 
             var milliseconds = date.getMilliseconds();
-            if (milliseconds > 10 & milliseconds < 100) {
+            if (milliseconds >= 10 & milliseconds < 100) {
                 milliseconds = "0" + milliseconds;
             } else if (milliseconds < 10) {
                 milliseconds = "00" + milliseconds;
             }
 
-            document.getElementById("timer").innerHTML = hours + ":" + minutes + ":" + seconds + ":" + milliseconds;
+            var time_string = hours + ":" + minutes + ":" + seconds + ":" + milliseconds
+            if (time_string.length != 12) {
+                alert(time_string);
+                console.log(time_string);
+            }
+            document.getElementById("timer").innerHTML = time_string;
         }, 10);
     </script>
 </body </html>
